--- a/immunotracker/package.json
+++ b/immunotracker/package.json
@@ -6,6 +6,7 @@
     "axios": "^0.18.0",
     "formsy-react": "^1.1.5",
     "formsy-semantic-ui-react": "^0.3.4",
+    "jwt-decode": "^2.2.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-redux": "^7.0.2",
