--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  base = “./immunotracker”
+  base = "./immunotracker"
   publish = "./immunotracker/build"
-  command = "yarn build"  
+  command = "yarn build"
   
 
